# ai-local

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/advanced-reasoning/src/: lib.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: lib.rs
crates/cli-interface/: Cargo.toml
crates/cli-interface/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  models.rs  types.rs  utils.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/hardware-profiler/: Cargo.toml
crates/hardware-profiler/src/: lib.rs
crates/inference-engine/: Cargo.toml
crates/inference-engine/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/model-manager/: Cargo.toml
crates/model-manager/src/: config.rs  downloader.rs  lib.rs  loader.rs  metadata.rs  repository.rs  versioning.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: coordinator.rs  engine.rs  lib.rs  lifecycle.rs  metrics.rs  state.rs
crates/performance-monitor/: Cargo.toml
crates/performance-monitor/src/: lib.rs
crates/performance-optimizations/src/: lib.rs
crates/resource-manager/: Cargo.toml
crates/resource-manager/src/: allocator.rs  lib.rs  monitor.rs  scheduler.rs  throttler.rs
crates/scaling-adapter/: Cargo.toml
crates/scaling-adapter/src/: lib.rs
crates/search-engine/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/storage-adapter/: Cargo.toml
crates/storage-adapter/src/: lib.rs
crates/task-scheduler/: Cargo.toml
crates/task-scheduler/src/: executor.rs  lib.rs  queue.rs  task.rs
crates/web-interface/: Cargo.toml
crates/web-interface/src/: lib.rs
src/: lib.rs  main.rs
