[package]
name = "ai_orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "High-performance AI model orchestration system written in Rust"
readme = "README.md"
repository = "https://github.com/ai-orchestrator/ai-orchestrator"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crates/orchestrator-core",
    "crates/model-manager",
    "crates/resource-manager",
    "crates/task-scheduler",
    "crates/inference-engine",
    "crates/hardware-profiler",
    "crates/performance-monitor",
    "crates/scaling-adapter",
    "crates/storage-adapter",
    "crates/web-interface",
    "crates/cli-interface",
    "crates/api-gateway",
    "crates/security",
    "crates/logging",
    "crates/config",
    "crates/common",
]

[dependencies]
orchestrator-core = { path = "crates/orchestrator-core" }
model-manager = { path = "crates/model-manager" }
resource-manager = { path = "crates/resource-manager" }
task-scheduler = { path = "crates/task-scheduler" }
inference-engine = { path = "crates/inference-engine" }
hardware-profiler = { path = "crates/hardware-profiler" }
performance-monitor = { path = "crates/performance-monitor" }
scaling-adapter = { path = "crates/scaling-adapter" }
storage-adapter = { path = "crates/storage-adapter" }
web-interface = { path = "crates/web-interface" }
cli-interface = { path = "crates/cli-interface" }
api-gateway = { path = "crates/api-gateway" }
security = { path = "crates/security" }
logging = { path = "crates/logging" }
config = { path = "crates/config" }
common = { path = "crates/common" }

# External dependencies
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
num_cpus = "1.15"
bytesize = "1.2"
libc = "0.2"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 16

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
