[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "External API implementation for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
security = { path = "../security" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["headers", "macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "compression-full", "cors", "auth"] }
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "8.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
mime = "0.3"
bytes = "1.4"
http = "0.2"
http-body = "0.4"
