[package]
name = "cli-interface"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Command-line interface for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
api-gateway = { path = "../api-gateway" }
hardware-profiler = { path = "../hardware-profiler" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.3", features = ["derive", "env", "wrap_help", "unicode", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.10"
indicatif = "0.17"
console = "0.15"
term_size = "0.3"
textwrap = "0.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
crossterm = "0.26"
tui = "0.19"
tui-tree-widget = "0.11"
ratatui = "0.22"
