[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Common utilities and types for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.28", features = ["sync"] }
async-trait = "0.1"
bytesize = "1.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
