[package]
name = "config"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Configuration management for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }

tokio = { version = "1.28", features = ["full", "fs"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.13"
dirs = "5.0"
once_cell = "1.17"
parking_lot = "0.12"
dashmap = "5.4"
toml = "0.7"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
