[package]
name = "hardware-profiler"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Hardware detection and benchmarking for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.15"
bytesize = "1.2"
libc = "0.2"
sysinfo = "0.29"
raw-cpuid = "10.7"
lazy_static = "1.4"
rayon = "1.7"
ndarray = "0.15"
half = { version = "2.2", features = ["serde"] }
memmap2 = "0.5"

# Optional GPU dependencies
[dependencies.cuda-runtime-sys]
version = "0.3"
optional = true

[dependencies.rocm-runtime-sys]
version = "0.1"
optional = true

[features]
default = []
cuda = ["cuda-runtime-sys"]
rocm = ["rocm-runtime-sys"]
