[package]
name = "inference-engine"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Model inference execution for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
model-manager = { path = "../model-manager" }
resource-manager = { path = "../resource-manager" }
hardware-profiler = { path = "../hardware-profiler" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
half = { version = "2.2", features = ["serde"] }
num-traits = "0.2"
rayon = "1.7"
crossbeam = "0.8"
libc = "0.2"
memmap2 = "0.5"
bytemuck = "1.13"

# Optional GPU dependencies
[dependencies.cuda-runtime-sys]
version = "0.3"
optional = true

[dependencies.rocm-runtime-sys]
version = "0.1"
optional = true

[features]
default = []
cuda = ["cuda-runtime-sys"]
rocm = ["rocm-runtime-sys"]
