[package]
name = "model-manager"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Model lifecycle management for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
hardware-profiler = { path = "../hardware-profiler" }
storage-adapter = { path = "../storage-adapter" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1.4"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
async-compression = { version = "0.3", features = ["tokio", "gzip", "zstd"] }
tar = "0.4"
tempfile = "3.5"
