[package]
name = "performance-monitor"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Performance metrics collection and analysis for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
hardware-profiler = { path = "../hardware-profiler" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
hdrhistogram = "7.5"
sysinfo = "0.29"
circular-buffer = "0.1"
