[package]
name = "resource-manager"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Resource monitoring and allocation for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
hardware-profiler = { path = "../hardware-profiler" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.15"
bytesize = "1.2"
libc = "0.2"
sysinfo = "0.29"
crossbeam = "0.8"
rayon = "1.7"
