[package]
name = "scaling-adapter"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Dynamic scaling and adaptation for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
resource-manager = { path = "../resource-manager" }
hardware-profiler = { path = "../hardware-profiler" }
performance-monitor = { path = "../performance-monitor" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
rayon = "1.7"
crossbeam = "0.8"
petgraph = "0.6"
