[package]
name = "storage-adapter"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Persistent storage management for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full", "fs"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bytes = "1.4"
memmap2 = "0.5"
async-compression = { version = "0.3", features = ["tokio", "gzip", "zstd"] }
tar = "0.4"
tempfile = "3.5"
walkdir = "2.3"
sha2 = "0.10"
hex = "0.4"
