[package]
name = "web-interface"
version = "0.1.0"
edition = "2021"
authors = ["AI Orchestrator Team"]
description = "Web UI implementation for AI Orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
api-gateway = { path = "../api-gateway" }
logging = { path = "../logging" }
config = { path = "../config" }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["ws", "headers"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace", "compression-full", "cors"] }
tokio-tungstenite = "0.18"
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
mime_guess = "2.0"
rust-embed = { version = "6.6", features = ["compression"] }
handlebars = "4.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
